# testkit

./: .env.example  .envrc.example  .gitignore  Cargo.toml  Justfile  LICENSE-MIT  README.md
.devcontainer/: .env  devcontainer.json  docker-compose.yml
.devcontainer/docker/: Dockerfile  Dockerfile.mysql  Dockerfile.postgres
.devcontainer/scripts/: zshrc
.github/workflows/: test.yml
examples/: Cargo.toml  custom_connection.rs  external_crate_usage.rs  fluent_api.rs  function_postgres_test.rs  macro_sqlite_test.rs  postgres_example.rs  simple_mysql_test.rs  simple_postgres_test.rs  simple_sqlite_test.rs  sqlx_mysql_usage.rs  sqlx_postgres_usage.rs  test_example.rs
examples/src/: main.rs
instructions/: outline.md  prompt.md  purpose.md
migrations/: 20241227024158_initial.sql
scripts/: colors.sh  devex.sh
src/: backend.rs  db.rs  env.rs  error.rs  lib.rs  macros.rs  macs.rs  migrations.rs  pool.rs  postgres.rs  prelude.rs  template.rs  test_db.rs  tests.rs  tracing.rs  util.rs  wrapper.rs
src/backends/: mod.rs  mysql.rs  postgres.rs  sqlite.rs  sqlx.rs
src/backends/sqlx/: mod.rs  sqlx_mysql.rs  sqlx_postgres.rs
src/db/: mysql.rs  postgres.rs
testkit-cli/: Cargo.toml
testkit-cli/src/: main.rs
testkit-core/: Cargo.toml  README.md
testkit-core/src/: context.rs  lib.rs  result.rs  tests.rs  tracing.rs  utils.rs
testkit-core/src/database/: mod.rs  test_database.rs  transaction.rs
testkit-core/src/handlers/: and_then.rs  boxed.rs  db.rs  mod.rs  setup.rs  tests.rs  with_database.rs  with_transaction.rs
testkit-core/src/operators/: and_then.rs  mod.rs  ok.rs  or_else.rs  setup.rs  then.rs  with_context.rs  with_database.rs  with_transaction.rs
testkit-core/src/testdb/: context.rs  mod.rs  pooling.rs  test_database.rs  transaction.rs
testkit-core/tests/: boxed_api.rs  ergonomic_api.rs  fluent_api.rs
testkit-mysql/: Cargo.toml
testkit-mysql/src/: error.rs  lib.rs  mysql_async.rs  sqlx_mysql.rs
testkit-mysql/tests/: mysql_async_tests.rs  mysql_sqlx_tests.rs
testkit-postgres/: Cargo.toml
testkit-postgres/src/: common_traits.rs  error.rs  lib.rs  sqlx_postgres.rs  tokio_postgres.rs
testkit-postgres/tests/: boxed_doctest.rs  postgres_tests.rs  simple_tests.rs  sqlx_tests.rs  test_helpers.rs
testkit-sqlx-postgres/: Cargo.toml
testkit-sqlx-postgres/src/: lib.rs
tests/: concurrent_db_operations.rs  cross_database_operations.rs  db_template_tests.rs  error_handling.rs  mysql_auto_cleanup.rs  mysql_features.rs  mysql_simple_test.rs  postgres_auto_cleanup.rs  postgres_features.rs  safe_naming.rs  sqlite_auto_cleanup.rs  sqlite_features.rs  sqlx_mysql_auto_cleanup.rs  sqlx_mysql_features.rs  sqlx_mysql_simple_test.rs  sqlx_postgres_auto_cleanup.rs  sqlx_postgres_features.rs  sqlx_postgres_simple_test.rs  sqlx_sqlite_auto_cleanup.rs  sqlx_sqlite_features.rs
tests/common/: mod.rs
