[package]
name = "db-testkit"
version = "0.2.0"
edition = "2021"
description = "A test toolkit for database testing in Rust"
license = "MIT"
repository = "https://github.com/auser/testkit"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
tokio-postgres = { version = "0.7.10", optional = true }
mysql_async = { version = "0.35", optional = true }
sqlx = { version = "0.8.2", features = [
  "runtime-tokio-rustls",
  "uuid",
], optional = true }
async-trait = "0.1.77"
futures = "0.3.30"
# Required logging dependencies - tracing is always included as a core dependency
tracing = "0.1.40"
tracing-subscriber = "0.3"
uuid = { version = "1.6.1", features = ["v4"] }
thiserror = "2.0"
url = "2.5.0"
parking_lot = "0.12.1"
dotenvy = "0.15.7"
tempfile = "3.9.0"

[features]
default = ["sqlx-postgres"]
postgres = ["dep:tokio-postgres"]
mysql = ["dep:mysql_async"]
sqlite = ["sqlx-sqlite"]
sqlx-postgres = ["dep:sqlx", "sqlx-backend", "sqlx/postgres"]
sqlx-mysql = ["sqlx/mysql", "dep:sqlx", "sqlx-backend"]
sqlx-sqlite = ["sqlx/sqlite", "dep:sqlx", "sqlx-backend"]
sqlx-backend = []

[dev-dependencies]
tokio = { version = "1.35.1", features = ["full", "test-util"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
