[workspace]
members = ["testkit-core"]
resolver = "2"

# Required logging dependencies - tracing is always included as a core dependency
[workspace.dependencies]
# Required logging dependencies - tracing is always included as a core dependency
uuid = { version = "1.6.1", features = ["v4"] }
thiserror = "2.0"
