[package]
name = "testkit-examples"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
testkit-core = { path = "../testkit-core" }
testkit-postgres = { path = "../testkit-postgres" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
dotenvy = "0.15.0"
tracing-subscriber = "0.3"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio"] }

[[example]]
name = "fluent_api"
path = "fluent_api.rs"

[[example]]
name = "postgres_example"
path = "postgres_example.rs"
