[package]
name = "testkit-cli"
version = "0.1.2"
edition = "2024"
description = "Command line interface for testkit"
license = "MIT"
authors = ["Ari Lerner <me@ari.io>"]
repository = "https://github.com/auser/testkit"

[dependencies]
clap = { version = "4.5.31", features = ["derive", "env"] }
testkit-mysql = { path = "../testkit-mysql", version = "0.1.1" }
testkit-postgres = { path = "../testkit-postgres", version = "0.1.1" }

[[bin]]
name = "testkit"
path = "src/main.rs"
