[package]
name = "testkit-core"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = { version = "0.15.0", optional = true }
tracing = { version = "0.1.40", features = [], optional = true }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
], optional = true }
async-trait = "0.1.75"
uuid = { version = "1.4", features = ["v4"] }
parking_lot = "0.12.1"
tokio = { version = "1.40.0", features = ["sync", "rt", "rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }

[features]
default = ["tracing", "dotenvy"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]
dotenvy = ["dep:dotenvy"]
