[package]
name = "testkit-core"
version = "0.1.1"
edition = "2024"
description = "Core utilities for testkit"
license = "MIT"
authors = ["Ari Lerner <me@ari.io>"]
repository = "https://github.com/auser/testkit"

[dependencies]
dotenvy = { version = "0.15.0", optional = true }
tracing = { version = "0.1.40", features = [], optional = true }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
], optional = true }
async-trait = "0.1.75"
uuid = { version = "1.4", features = ["v4"] }
parking_lot = "0.12.1"
# tokio = { version = "1.40.0", features = ["sync", "rt", "rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.2", default-features = false, features = [
  "postgres",
  "runtime-tokio",
] }
url = { version = "2.4.11", features = ["serde"] }

[features]
default = ["tracing", "dotenvy"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]
dotenvy = ["dep:dotenvy"]
