[package]
name = "testkit-mysql"
version = "0.1.1"
edition = "2024"
description = "MySQL support for the testkit database testing library"
license = "MIT"
authors = ["Ari Lerner <me@ari.io>"]
repository = "https://github.com/auser/testkit"

[dependencies]
testkit-core = { version = "0.1.0", path = "../testkit-core" }
async-trait = "0.1"
thiserror = "2.0"
tracing = "0.1"
futures = "0.3"
uuid = { version = "1.6", features = ["v4"] }
tokio = { version = "1", features = ["rt", "macros", "time"] }
url = "2.4"

# Feature-specific dependencies
mysql_async = { version = "0.35.1", optional = true }

sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "mysql",
], optional = true }

[features]
default = ["with-mysql-async"]
with-mysql-async = ["mysql_async"]
with-sqlx = ["sqlx"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util", "macros"] }
