[package]
name = "testkit-postgres"
version = "0.1.1"
edition = "2024"
description = "PostgreSQL support for the testkit database testing library"
license = "MIT"
authors = ["Ari Lerner <me@ari.io>"]
repository = "https://github.com/auser/testkit"

[dependencies]
testkit-core = { path = "../testkit-core", version = "0.1.0" }
async-trait = "0.1"
thiserror = "2.0"
tracing = "0.1"
futures = "0.3"
uuid = { version = "1.6", features = ["v4"] }
tokio = { version = "1", features = ["rt", "macros", "time"] }
postgres = "0.19"
url = "2.4"

# Feature-specific dependencies
tokio-postgres = { version = "0.7", optional = true }
deadpool-postgres = { version = "0.14", optional = true }
postgres-types = { version = "0.2", optional = true }

sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
], optional = true }

[features]
default = ["with-tokio-postgres"]
with-tokio-postgres = ["tokio-postgres", "deadpool-postgres", "postgres-types"]
with-sqlx = ["dep:sqlx"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util", "macros"] }
