[package]
name = "testkit-sqlx-postgres"
version = "0.1.0"
edition = "2024"

[dependencies]
testkit-core = { path = "../testkit-core" }
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "uuid",
] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
uuid = { version = "1.4", features = ["v4"] }
thiserror = "1.0"
tracing = "0.1"
parking_lot = "0.12"
url = "2.4"
rand = "0.8"
backtrace = "0.3"
